--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,10 +20,10 @@
         android:text="@string/status">
     </TextView>
 
-    <ProgressBar
+  <!--  <ProgressBar
         android:id="@+id/prog"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 
 </LinearLayout>
